Fix icon positioning issue in Firefox
In webkit & blink browsers the 7px would incorrectly position the icon
in the editor. This 7px had been added for Firefox. On the frontend
both types of renderers do the same. The misalignment in Firefox is
caused by `white-space: pre-wrap` present on divs. This results in
different behavior in Firefox vs webkit/blink. By setting
`white-space` to normal this is fixed.

--- a/themes/shiro/assets/src/editor/blocks/core-button/style.scss
+++ b/themes/shiro/assets/src/editor/blocks/core-button/style.scss
@@ -3,7 +3,9 @@
 		&.is-style-as-link {
 			&.has-icon {
 				#{ $inner-selector }:before {
-					top: 7px;
+					// In Firefox, in the editor, this inherits `white-space: pre-wrap` from `div`.
+					// That results in a different positioning of the icon as compared to the frontend.
+					white-space: normal;
 				}
 			}
 		}
